clean up logging change collection getters to return streams